# audacity-noise-reduction

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_driver.bat  build_driver.sh  clean.bat  noisereduction.pyx  setup.py  test.bat  test.sh
ci/: Dockerfile  build_on_docker.sh
noisereduction/: Extensions.cpp  InputTrack.cpp  InputTrack.h  MemoryX.h  NoiseReduction.cpp  NoiseReduction.h  OutputTrack.cpp  OutputTrack.h  RealFFTf.cpp  RealFFTf.h  SndContext.h  SndMmap.cpp  SndMmap.h  TrackUtils.cpp  TrackUtils.h  Types.h  Utils.cpp  Utils.h  loguru.hpp  main.cpp  types.h
noisereduction.xcodeproj/: project.pbxproj
noisereduction.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
noisereduction/tests/: test_audacity.cpp  test_main.cpp  test_mmap_snd.cpp
test/: test-mono.sh  test-stereo.sh
test/separate-track-for-profiling/mono/: run.bat  run.sh
test/time-index-based-profiling/mono/: run.bat
test/time-index-based-profiling/stereo/: run.sh
